--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,10 +7,22 @@
     <title>To Do List</title>
   </head>
   <body>
-    <% if(kindOfDay === "Thursday") {%>
+    <h1><%= kindOfDay %></h1>
+
+    <ul>
+      <% for(var i=0; i<newListItems.length; i++){ %>
+      <li><%= newListItems[i] %></li>
+      <%}%>
+    </ul>
+    <form action="/" method="post">
+      <input type="text" name="newItem" />
+      <button type="submit" name="button">Add</button>
+    </form>
+
+    <!--     <% if(kindOfDay === "Thursday") {%>
     <h1 style="color: purple"><%= kindOfDay %> ToDo List</h1>
     <% } else { %>
     <h1 style="color: blue"><%= kindOfDay %> ToDo List</h1>
-    <%}%>
+    <%}%> -->
   </body>
 </html>
