--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,7 @@
     <h1><%= kindOfDay %></h1>
 
     <ul>
-      <% for(var i=0; i<newListItems.length; i++){ %>
+      <% for(let i=0; i<newListItems.length; i++){ %>
       <li><%= newListItems[i] %></li>
       <%}%>
     </ul>
