--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,24 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+
+    <div class="box" id="heading">
     <h1><%= kindOfDay %></h1>
+  </div>
 
-    <ul>
-      <% for(let i=0; i<newListItems.length; i++){ %>
-      <li><%= newListItems[i] %></li>
-      <%}%>
-    </ul>
+<div class="box">
+  
+    <% for(let i=0; i<newListItems.length; i++){ %>
+      <div class="item">
+        <input type="checkbox">
+        <p><%= newListItems[i] %></p>
+      </div>
+    <%}%>
     <form action="/" method="post">
-      <input type="text" name="newItem" />
-      <button type="submit" name="button">Add</button>
+      <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+      <button type="submit" name="button">+</button>
     </form>
+</div>
 
-    <!--     <% if(kindOfDay === "Thursday") {%>
-    <h1 style="color: purple"><%= kindOfDay %> ToDo List</h1>
-    <% } else { %>
-    <h1 style="color: blue"><%= kindOfDay %> ToDo List</h1>
-    <%}%> -->
   </body>
 </html>
